--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -426,10 +426,6 @@ textarea.code {
 	top: 0;
 }
 
-.card-body.mh {
-	min-height: 840px;
-}
-
 // .btn btn-main float-right dx-button dx-button-normal dx-button-mode-contained dx-widget .navbar-sticky.is_stuck {
 // 	// border: 1px solid red !important;
 // 	z-index: 2000;
@@ -665,4 +661,21 @@ hr.sep {
 	margin-bottom: 0.5rem !important;
 	padding-bottom: 0.5rem !important;
 	border-bottom: 1px dotted #999 !important;
+}
+
+.card-body {
+	&.mh {
+		min-height: 840px;
+	}
+
+	&.mhn {
+		min-height: 825px;
+	}
+
+	background: url("/assets/img/bg-pages.png") no-repeat center center;
+
+	.card-body,
+	&.nbg {
+		background: none !important;
+	}
 }
