feat: Creación de Usuarios desde Integrantes, Desactivación de Usuarios en Cascada

--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -680,3 +680,11 @@ hr.sep {
 		background: none !important;
 	}
 }
+
+.bb {
+	border-bottom: 1px solid $color-gray-10;
+}
+
+.red {
+	color: $error;
+}
