ajustes a la interface configuracion de administracion

--- a/src/assets/css/_vars.scss
+++ b/src/assets/css/_vars.scss
@@ -1,7 +1,7 @@
 // Otras
 $text: #474747;
 $text-title: #494949;
-$error: #ec0000;
+$error: #8c1919;
 $error-bg: #ffffca;
 $otro: #49c9da;
 $max-width: 1300px;
@@ -17,7 +17,7 @@ $base-url: "/";
 // $base-url: "/udistrital/siciud-v2/";
 
 // Color
-$main-color: #4cba3f;
+$main-color: #8c1919;
 $main-color-oposite: #ffffff;
 $main-color-50: lighten($main-color, 50%);
 $main-color-100: lighten($main-color, 45%);
